--- a/src/App.css
+++ b/src/App.css
@@ -197,8 +197,8 @@
 .form {
   font-weight: bold;
   color: #36393B;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 0.2fr 2fr;
   gap: 10px;
   margin-top: 0;
   margin-bottom: 0.5em;
